// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interaction in toolbar mode sets notesPanelHeight to the correct value 1`] = `180`;

exports[`Interaction outbound ani sets a custom field on our custom field list 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "outboundAniLabel",
    "isLocalized": true,
    "value": "label 1 (value1)",
  },
]
`;

exports[`Interaction outbound ani sets a empty custom field list 1`] = `Immutable.List []`;

exports[`Interaction outbound email sets emailReply 1`] = `
Immutable.Map {
  "message": "",
  "bccInput": "",
  "ccInput": "",
  "toInput": "",
  "attachments": Immutable.List [],
  "bccs": Immutable.List [],
  "ccs": Immutable.List [],
  "tos": Immutable.List [
    Immutable.Map {
      "address": undefined,
      "name": undefined,
    },
  ],
  "subjectInput": "",
}
`;

exports[`Interaction with all the params adds the params to the object 1`] = `
Interaction {
  "activeContactForm": Immutable.Map {
    "contactForm": Immutable.Map {},
    "formIsDirty": false,
    "selectedIndexes": Immutable.Map {},
    "showErrors": Immutable.Map {},
    "editingContacts": Immutable.List [],
    "formIsValid": false,
    "unusedFields": Immutable.Map {},
    "formErrors": Immutable.Map {},
    "saveLoading": false,
  },
  "autoAnswer": true,
  "channelType": "mock-channel-type",
  "contact": Immutable.Map {
    "id": "mock-contact-id",
  },
  "contactMode": "mock-contact-mode",
  "customFields": Immutable.List [],
  "customFieldsCollapsed": true,
  "direction": "mock-direction",
  "dispositionDetails": Immutable.Map {
    "forceSelect": false,
    "dispositions": Immutable.List [],
    "categories": Immutable.List [],
    "selected": Immutable.List [],
  },
  "hideNewInteractionPanelOnWorkAccepted": true,
  "initiatedByCurrentAgent": true,
  "interactionId": "mock-interaction-id",
  "isColdTransferring": false,
  "isEnding": false,
  "isHolding": false,
  "isMuting": false,
  "isSidePanelCollapsed": false,
  "note": Immutable.Map {
    "body": "",
    "title": "",
    "notesPanelHeight": 300,
  },
  "notifications": Immutable.List [
    Immutable.Map {
      "messageKey": "callbackRequest",
      "messageValues": Immutable.Map {
        "callbackNumber": "mock-callback-number",
        "waitingFor": "0s",
      },
      "isDimissible": true,
    },
  ],
  "query": Immutable.Map {},
  "selectedSidePanelTab": "info",
  "status": "mock-status",
  "subject": "mock-subject",
  "timeAccepted": "mock-time-accepted",
  "timeout": 0,
  "transferringInConference": false,
  "warmTransfers": Immutable.List [],
  "wrapupDetails": Immutable.Map {
    "wrapupUpdateAllowed": false,
    "wrapupEnabled": false,
  },
}
`;

exports[`Interaction with no params sets defaults, ignores appropriate undefineds 1`] = `
Interaction {
  "activeContactForm": Immutable.Map {
    "contactForm": Immutable.Map {},
    "formIsDirty": false,
    "selectedIndexes": Immutable.Map {},
    "showErrors": Immutable.Map {},
    "editingContacts": Immutable.List [],
    "formIsValid": false,
    "unusedFields": Immutable.Map {},
    "formErrors": Immutable.Map {},
    "saveLoading": false,
  },
  "autoAnswer": undefined,
  "channelType": undefined,
  "contactMode": "search",
  "customFields": Immutable.List [],
  "customFieldsCollapsed": true,
  "direction": undefined,
  "dispositionDetails": Immutable.Map {
    "forceSelect": false,
    "dispositions": Immutable.List [],
    "categories": Immutable.List [],
    "selected": Immutable.List [],
  },
  "interactionId": "undefined-undefined-undefined",
  "isColdTransferring": false,
  "isEnding": false,
  "isHolding": false,
  "isMuting": false,
  "isSidePanelCollapsed": true,
  "note": Immutable.Map {
    "body": "",
    "title": "",
    "notesPanelHeight": 300,
  },
  "notifications": Immutable.List [],
  "query": Immutable.Map {},
  "selectedSidePanelTab": "info",
  "status": "work-offer",
  "timeout": NaN,
  "transferringInConference": false,
  "warmTransfers": Immutable.List [],
  "wrapupDetails": Immutable.Map {
    "wrapupUpdateAllowed": false,
    "wrapupEnabled": false,
  },
}
`;
